# pizza_drf

./: manage.py  pyproject.toml
pizza_project_drf/: asgi.py  settings.py  urls.py  wsgi.py
pizzas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
pizzas/migrations/: 0001_initial.py
